tests/errors/meta-function-ast-kind-value-output.ari
meta fn bad(input: ast) -> ast {
  return input.kind();
}

fn main() -> i64 {
  return bad!(1);
}
